Fix build failures. Formatting.