@@ -11,8 +11,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import io.opentelemetry.sdk.trace.export.SpanExporter;
+import java.util.Collections;
 import java.util.Properties;
-import java.util.Set;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -44,6 +44,6 @@ class NewRelicSpanExporterFactoryTest {
   @Test
   void testGetNames() {
     NewRelicSpanExporterFactory factory = new NewRelicSpanExporterFactory();
-    assertEquals(Set.of("newrelic"), factory.getNames());
+    assertEquals(Collections.singleton("newrelic"), factory.getNames());
   }
 }
